--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -1,6 +1,7 @@
 #!KAMAILIO
 
 include_file "test_defs.cfg"
+include_file "test_value.cfg"
 include_file "test_modules.cfg"
 
 # BFLG_ - Branch flags func: setbflag/resetbflag/isbflagset #############
@@ -12,10 +13,6 @@ include_file "test_modules.cfg"
 #!define TFLG_FROM_CLIENT_WS 7
 #!define TFLG_FROM_CLIENT_SIP 8
 #!define TFLG_NAT 5
-
-listen=IP_FOR_SIP_PROV:PORT_FOR_SIP_PROV
-listen=IP_FOR_SIP_CLIENT:PORT_FOR_SIP_CLIENT
-
 
 ################################################################
 #END MODULES & PARAMS
@@ -155,8 +152,8 @@ route[CHECK_USER_AGENT]
 
 route[DIRECT_DETECT]
 {
-    if ( $Ri == "IP_ADDRESS_OUTBOUND_SERVER_PROV" and $Rp == "PORT_OUTBOUND_SERVER_PROV" )                  setflag(TFLG_FROM_PROV);
-    else if ( $Ri == "IP_ADDRESS_OUTBOUND_SERVER_CLIENT_WS" and $Rp == "PORT_OUTBOUND_SERVER_CLIENT_WS" )   setflag(TFLG_FROM_CLIENT_WS);
+    if ( $Ri == "IP_FOR_SIP_PROV" and $Rp == "PORT_FOR_SIP_PROV" )                  setflag(TFLG_FROM_PROV);
+    else if ( $Ri == "IP_FOR_SIP_CLIENT_WS" and $Rp == "PORT_FOR_SIP_CLIENT_WS" )   setflag(TFLG_FROM_CLIENT_WS);
     else setflag(TFLG_FROM_CLIENT_SIP);
 
     return(1);
@@ -169,7 +166,6 @@ route[PROCESSING_OPTIONS]
     pv_printf("$avp(s:log)", "-----------------------------------"); route(LOG);
 
     if ( !route(SELECT_CONTACT_FROM_LOCATION) ) {
-        #sl_send_reply('404', 'Not found contact');
         exit;
     }
 
@@ -333,8 +329,6 @@ route[CHECK_ACTIVE_DIALOG]
 route[CHECK_RE_INVITE]
 {
     if ( has_totag() && loose_route() ) {
-        # re-invite
-
         pv_printf("$avp(s:log)", "-----------------------------------"); route(LOG);
         pv_printf("$avp(s:log)", "Re-INVITE from $si --> forward loose_route"); route(LOG);
         pv_printf("$avp(s:log)", "==================================="); route(LOG);
@@ -428,8 +422,31 @@ branch_route[TO_SIP_PROVIDER]
     pv_printf("$avp(s:log)", "-----------------------------------"); route(LOG);
 
     route(SET_LOCAL_SOCKET);
-    if ($rm == "REGISTER") route(ADD_SUPPORT_PATH_IN_MESSAGE);
     route(NAT_MANAGE);
+
+    if ( is_method('REGISTER') ) {
+        pv_printf("$avp(s:log)", "Change contact and save"); route(LOG);
+
+        $avp(s:orig_contact) = $ct;
+        $avp(s:contact_expires) = $ct;
+
+        if ( !avp_subst("$avp(s:contact_expires)", "/.*<(.*)>;expires=(.*);(.*)$/\2/") ) {
+            if( is_present_hf("Expires") ) $avp(s:contact_expires) = $hdr(Expires);
+            remove_hf("Expires");
+        }
+
+        avp_subst("$avp(s:orig_contact)", "/.*<(.*)>;(.*)/\1/");
+
+        pv_printf("$avp(s:log)", "Data: $avp(s:contact_expires) - $avp(s:orig_contact)"); route(LOG);
+
+        $sht(remote_sip_contact=>$fU) = $ct;
+
+        pv_printf("$avp(s:log)", "  Remove original hdr Contact --> insert new"); route(LOG);
+        remove_hf("Contact");
+
+        insert_hf("Contact: <sip:$fU@$sel(cfg_get.proxy.ext_for_sip_prov):$sel(cfg_get.proxy.port_for_sip_prov)>;expires=$avp(s:contact_expires)\r\n", "Call-ID");
+        pv_printf("$avp(s:log)", "New contact: <sip:$fU@$sel(cfg_get.proxy.ext_for_sip_prov):$sel(cfg_get.proxy.port_for_sip_prov)>;expires=$avp(s:contact_expires)"); route(LOG);
+    }
 }
 
 branch_route[TO_CLIENT]
@@ -464,23 +481,6 @@ route[SET_LOCAL_SOCKET]
     pv_printf("$avp(s:log)", "Set default local socket udp:$sel(cfg_get.proxy.ip_for_sip_client):$sel(cfg_get.proxy.port_for_sip_client)"); route(LOG);
     set_send_socket("udp:$sel(cfg_get.proxy.ip_for_sip_client):$sel(cfg_get.proxy.port_for_sip_client)");
     return(-1);
-}
-
-route[ADD_SUPPORT_PATH_IN_MESSAGE]
-{
-    if (is_present_hf("Supported") ) {
-        $avp(s:hdr_supported) = $_s($hdr(Supported), path);
-        remove_hf("Supported");
-    }
-    else {
-        $avp(s:hdr_supported) = $_s(path);
-    }
-
-    insert_hf("Supported: $avp(s:hdr_supported)\r\n","Call-ID");
-    insert_hf("Path: <sip:$sel(cfg_get.proxy.ip_for_sip_prov):$sel(cfg_get.proxy.port_for_sip_prov)>\r\n","Call-ID");
-    insert_hf("Require: path\r\n","Call-ID");
-
-    return(1);
 }
 
 route[NAT_MANAGE]
@@ -543,6 +543,24 @@ failure_route[FAIL_SIP_PROVIDER]
 onreply_route
 {
     pv_printf("$avp(s:log)", "Receive reply $rs $rr on $rm $si"); route(LOG);
+
+    if($rm == "REGISTER" and $rs == "200")
+    {
+        if( $sht(remote_sip_contact=>$fU) != $null  )
+        {
+            $avp(s:remote_sip_contact) = $sht(remote_sip_contact=>$fU);
+
+            $avp(s:contact_expires) = $hdr(Contact);
+            pv_printf("$avp(s:log)", "Receive hdr contact $hdr(Contact)"); route(LOG);
+            avp_subst("$avp(s:contact_expires)", "/(.*)<sip:(.*)>;(.*)/\3/");
+
+            pv_printf("$avp(s:log)", "Result parsing expires: $avp(s:contact_expires)"); route(LOG);
+            pv_printf("$avp(s:log)", "Remove receive hdr Contact --> insert new"); route(LOG);
+            remove_hf("Contact");
+            insert_hf("Contact: $avp(s:remote_sip_contact);$avp(s:contact_expires)\r\n", "Call-ID");
+            pv_printf("$avp(s:log)", "New contact: $avp(s:remote_sip_contact);$avp(s:contact_expires)"); route(LOG);
+        }
+    }
 
     if ( status=~"[12][0-9][0-9]" ) {
         route(NAT_MANAGE);
@@ -629,7 +647,7 @@ route[RTP_PROXY_SET]
 {
     set_rtpengine_set("1");
 
-    if ( rtpengine_manage("ICE=remove replace-origin replace-session-connection record-call=off") ) {
+    if ( rtpengine_manage("ICE=remove replace-origin replace-session-connection record-call=on") ) {
         pv_printf("$avp(s:log)", "RTP Proxy OK"); route(LOG);
         return(1);
     }
