--- a/test_modules.cfg
+++ b/test_modules.cfg
@@ -49,15 +49,7 @@ loadmodule "sanity.so"
 loadmodule "htable.so"
 #####################################################################
     modparam("htable", "db_url", "mysql://DBUSER_RO:DBPASSWORD_RO@DB_HOST/DB_NAME")
-
-loadmodule "uac.so"
-####################################################################
-    modparam("uac", "restore_mode","auto")
-    modparam("uac", "reg_db_url", "mysql://DBUSER_RW:DBPASSWORD_RW@DB_HOST/DB_NAME")
-    modparam("uac", "reg_db_table", "uacreg")
-    modparam("uac", "reg_timer_interval", 10)
-    modparam("uac", "reg_retry_interval", 1)
-    modparam("uac", "reg_contact_addr", "IP_FOR_SIP_PROV:PORT_FOR_SIP_PROV")
+    modparam("htable", "htable", "remote_sip_contact=>size=12;autoexpire=172800;")      # 2 дня сохраняется запись
 
 loadmodule 'usrloc.so'
 ###############################################################
@@ -65,6 +57,7 @@ loadmodule 'usrloc.so'
     modparam('usrloc', 'fetch_rows', 5000)
     modparam('usrloc', 'hash_size', 12) #default 9
     modparam('usrloc', 'db_check_update', 1)            # permanent Duplicate entry after set to 1
+    #modparam('usrloc', 'db_check_update', 0)
     modparam('usrloc', 'db_ops_ruid', 1)
     modparam('usrloc', 'timer_interval', 120)
     modparam("usrloc", "handle_lost_tcp", 1)
@@ -133,13 +126,11 @@ loadmodule "topos.so"
     modparam("topos", "mask_callid", 0)
     modparam("topos", "sanity_checks", 1)
     modparam("topos", "branch_expire", 300)
-
+    modparam("topos", "contact_host", "IP_FOR_SIP_PROV")
 
 loadmodule "topos_redis.so"
 ########################################################################
     modparam("topos_redis", "serverid", "redis_server")
 
-
-loadmodule "regex.so"
-loadmodule "corex.so"
-
+loadmodule "regex.so"               # Для pcre_match
+loadmodule "corex.so"               # Для set_send_socket
