--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -26,7 +26,8 @@ request_route
     route(PROCESSING_OPTIONS);
 
     pv_printf("$avp(s:log)", "============ RECEIVE $rm =========="); route(LOG);
-    pv_printf("$avp(s:log)", "Src:        $si:$sp:$rp"); route(LOG);
+    pv_printf("$avp(s:log)", "Src IP Port:$si:$sp:$rp:$Rp:$Ri"); route(LOG);
+    pv_printf("$avp(s:log)", "Rec IP Port:$Ri:$Rp"); route(LOG);
     pv_printf("$avp(s:log)", "R-URI:      $ru"); route(LOG);
     pv_printf("$avp(s:log)", "From User:  $fU"); route(LOG);
     pv_printf("$avp(s:log)", "To User:    $tU"); route(LOG);
@@ -124,11 +125,6 @@ route[CHECK_PARAMETERS_PACKET]
         exit;
     }
 
-    if ( uri==myself ) {
-        pv_printf("$avp(s:log)", "SIP message request domain MYSELF --> Send 420"); route(LOG);
-        sl_send_reply('420','Bad Extension');
-        exit;
-    }
 }
 
 route[CHECK_USER_AGENT]
@@ -152,8 +148,8 @@ route[CHECK_USER_AGENT]
 
 route[DIRECT_DETECT]
 {
-    if ( $Ri == "IP_FOR_SIP_PROV" and $Rp == "PORT_FOR_SIP_PROV" )                  setflag(TFLG_FROM_PROV);
-    else if ( $Ri == "IP_FOR_SIP_CLIENT_WS" and $Rp == "PORT_FOR_SIP_CLIENT_WS" )   setflag(TFLG_FROM_CLIENT_WS);
+    if ( $_s($Ri) == $_s($sel(cfg_get.proxy.ip_for_sip_prov)) and $_s($Rp) == $_s($sel(cfg_get.proxy.port_for_sip_prov)) )        setflag(TFLG_FROM_PROV);
+    else if ( $_s($Ri) == $_s($sel(cfg_get.proxy.ip_for_ws_client)) and $_s($Rp) == $_s($sel(cfg_get.proxy.ip_for_ws_client)) )   setflag(TFLG_FROM_CLIENT_WS);
     else setflag(TFLG_FROM_CLIENT_SIP);
 
     return(1);
@@ -298,7 +294,7 @@ route[PROCESSING_ACK]
 
     if ( route(RTP_PROXY_CHECK_METHOD) ) t_on_reply("RTP_PROXY_REPLY");
 
-    route(CHECK_ACTIVE_DIALOG);
+    #route(CHECK_ACTIVE_DIALOG);
     route(TRELAY);
 }
 
