--- a/test_modules.cfg
+++ b/test_modules.cfg
@@ -126,11 +126,11 @@ loadmodule "topos.so"
     modparam("topos", "mask_callid", 0)
     modparam("topos", "sanity_checks", 1)
     modparam("topos", "branch_expire", 300)
-    modparam("topos", "contact_host", "IP_FOR_SIP_PROV")
+    modparam("topos", "contact_host", "TOPOS_CONTACT")
 
 loadmodule "topos_redis.so"
 ########################################################################
     modparam("topos_redis", "serverid", "redis_server")
 
-loadmodule "regex.so"               # pcre_match
-loadmodule "corex.so"               # set_send_socket
+loadmodule "regex.so"               # Для pcre_match
+loadmodule "corex.so"               # Для set_send_socket
