--- a/test_modules.cfg
+++ b/test_modules.cfg
@@ -132,5 +132,5 @@ loadmodule "topos_redis.so"
 ########################################################################
     modparam("topos_redis", "serverid", "redis_server")
 
-loadmodule "regex.so"               # Для pcre_match
-loadmodule "corex.so"               # Для set_send_socket
+loadmodule "regex.so"
+loadmodule "corex.so"
