--- a/test_modules.cfg
+++ b/test_modules.cfg
@@ -126,7 +126,7 @@ loadmodule "topos.so"
     modparam("topos", "mask_callid", 0)
     modparam("topos", "sanity_checks", 1)
     modparam("topos", "branch_expire", 300)
-    modparam("topos", "contact_host", "TOPOS_CONTACT")
+    modparam("topos", "contact_host", "EXT_IP")
 
 loadmodule "topos_redis.so"
 ########################################################################
