--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -1,8 +1,8 @@
 #!KAMAILIO
 
-include_file "test_defs.cfg"
-include_file "test_value.cfg"
-include_file "test_modules.cfg"
+include_file "defs.cfg"
+include_file "value.cfg"
+include_file "modules.cfg"
 
 # BFLG_ - Branch flags func: setbflag/resetbflag/isbflagset #############
 # TFLG_ - Transaction (message) flags func: setflag/resetflag/isflagset ############
@@ -26,8 +26,8 @@ request_route
     route(PROCESSING_OPTIONS);
 
     pv_printf("$avp(s:log)", "============ RECEIVE $rm =========="); route(LOG);
-    pv_printf("$avp(s:log)", "Src IP Port:$si:$sp:$rp:$Rp:$Ri"); route(LOG);
-    pv_printf("$avp(s:log)", "Rec IP Port:$Ri:$Rp"); route(LOG);
+    pv_printf("$avp(s:log)", "Source IP Port: $si:$sp:$rp:$Rp:$Ri"); route(LOG);
+    pv_printf("$avp(s:log)", "Receive IP Port: $Ri:$Rp"); route(LOG);
     pv_printf("$avp(s:log)", "R-URI:      $ru"); route(LOG);
     pv_printf("$avp(s:log)", "From User:  $fU"); route(LOG);
     pv_printf("$avp(s:log)", "To User:    $tU"); route(LOG);
@@ -66,7 +66,8 @@ route[PROCESSING_REGISTER]
 
     pv_printf("$avp(s:log)", "Original contact: $hdr(Contact)"); route(LOG);
 
-    if ( !route(SAVE_CONTACT_IN_LOCATION) ) {
+    if ( !route(SAVE_CONTACT_IN_LOCATION) )
+    {
         sl_send_reply("500", "Server error");
         exit;
     }
@@ -85,16 +86,19 @@ route[PROCESSING_INVITE]
 
     if ( route(RTP_PROXY_CHECK_METHOD) ) t_on_reply("RTP_PROXY_REPLY");
 
-    if ( route(CHECK_RE_INVITE) ) {
+    if ( route(CHECK_RE_INVITE) )
+    {
         t_relay();
         exit;
     }
 
-    if ( isflagset(TFLG_FROM_PROV) ) {
+    if ( isflagset(TFLG_FROM_PROV) )
+    {
         route(TO_CLIENT);
         t_on_branch("TO_CLIENT");
     }
-    else {
+    else
+    {
         route(TO_SIP_PROVIDER);
         t_on_branch("TO_SIP_PROVIDER");
         t_on_failure("FAIL_SIP_PROVIDER");
@@ -489,9 +493,12 @@ route[NAT_MANAGE]
         return;
     }
 
-    if ( is_request() ) {
-        if (has_totag() ) {
-            if ( check_route_param("nat=yes") ) {
+    if ( is_request() )
+    {
+        if (has_totag() )
+        {
+            if ( check_route_param("nat=yes") )
+            {
                 setbflag(BFLG_NAT);
             }
         }
@@ -500,16 +507,21 @@ route[NAT_MANAGE]
     if ( !(isflagset(TFLG_NAT) || isbflagset(BFLG_NAT)) )
         return;
 
-    if ( is_request() ) {
-        if ( !has_totag() ) {
-            if ( t_is_branch_route() ) {
+    if ( is_request() )
+    {
+        if ( !has_totag() )
+        {
+            if ( t_is_branch_route() )
+            {
                 add_rr_param(";nat=yes");
             }
         }
     }
 
-    if ( is_reply() ) {
-        if ( isbflagset(BFLG_NAT) ) {
+    if ( is_reply() )
+    {
+        if ( isbflagset(BFLG_NAT) )
+        {
             if ( is_first_hop() )
                 set_contact_alias();
         }
@@ -643,7 +655,7 @@ route[RTP_PROXY_SET]
 {
     set_rtpengine_set("1");
 
-    if ( rtpengine_manage("ICE=remove replace-origin replace-session-connection record-call=on") ) {
+    if ( rtpengine_manage("ICE=remove replace-origin replace-session-connection") ) {
         pv_printf("$avp(s:log)", "RTP Proxy OK"); route(LOG);
         return(1);
     }
@@ -658,4 +670,6 @@ event_route[xhttp:request]
     pv_printf("$avp(s:log)", "*** HTTP event request $hdr(Upgrade)"); route(LOG);
     pv_printf("$avp(s:log)", "-----------------------------------"); route(LOG);
 }
+
+
 
